// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card dark mode snapshots renders default card in dark mode 1`] = `
<div
  data-theme="dark"
  style="padding: 20px;"
>
  <div
    class="cic-card"
    data-cic-component="card"
    data-variant="default"
  >
    Content
  </div>
</div>
`;

exports[`Card dark mode snapshots renders subtle variant in dark mode 1`] = `
<div
  data-theme="dark"
  style="padding: 20px;"
>
  <div
    class="cic-card"
    data-cic-component="card"
    data-variant="subtle"
  >
    Content
  </div>
</div>
`;

exports[`Card dark mode snapshots renders with multiple children in dark mode 1`] = `
<div
  data-theme="dark"
  style="padding: 20px;"
>
  <div
    class="cic-card"
    data-cic-component="card"
    data-variant="default"
  >
    <span>
      Child 1
    </span>
    <span>
      Child 2
    </span>
  </div>
</div>
`;

exports[`Card light mode snapshots renders default card snapshot 1`] = `
<div
  data-theme="light"
  style="padding: 20px;"
>
  <div
    class="cic-card"
    data-cic-component="card"
    data-variant="default"
  >
    Content
  </div>
</div>
`;

exports[`Card light mode snapshots renders subtle variant snapshot 1`] = `
<div
  data-theme="light"
  style="padding: 20px;"
>
  <div
    class="cic-card"
    data-cic-component="card"
    data-variant="subtle"
  >
    Content
  </div>
</div>
`;

exports[`Card light mode snapshots renders with multiple children snapshot 1`] = `
<div
  data-theme="light"
  style="padding: 20px;"
>
  <div
    class="cic-card"
    data-cic-component="card"
    data-variant="default"
  >
    <span>
      Child 1
    </span>
    <span>
      Child 2
    </span>
  </div>
</div>
`;
